dark mode added for gdpr popup - fixed

--- a/public/stylesheets/gdpr.css
+++ b/public/stylesheets/gdpr.css
@@ -1,5 +1,5 @@
 .gdpr{
-    background-color: var(--header-color);
+    background-color: var(--background-color);
 
 }
 
